--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ tenacity = "^8.2.3"
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
 flake8 = "^6.1.0"
+pytest = "^7.4.0"
+httpx = "^0.24.1"
+pytest-asyncio = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
